4th code review corrections - fixed header title and description. removed white space from menue block.

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -30,7 +30,7 @@
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
-  margin: 80px 0 0 40px;
+  margin: 80px 0 0 50px;
   max-width: 729px;
 }
 
@@ -50,7 +50,7 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  margin: 28px 0 0 40px;
+  margin: 28px 0 0 50px;
 }
 
 .header__footer {
